[package]
name = "slate-lang-def"
version = "0.1.0"
edition = "2021"

[dependencies]
lang-def = { git = "https://github.com/SReichelt/lang-tools.git" }
lang-test = { git = "https://github.com/SReichelt/lang-tools.git" }
temp-inst = { git = "https://github.com/SReichelt/temp-inst.git", features = [
    "derive",
] }
temp-stack = { git = "https://github.com/SReichelt/temp-inst.git" }
either = { version = "1.13.0" }
