[package]
name = "slate-kernel-metalogic"
version = "0.1.0"
edition = "2021"

[dependencies]
slate-kernel-util = { path = "../util" }
slate-kernel-generic = { path = "../generic" }
slate-kernel-generic-derive = { path = "../generic/derive" }
anyhow = "1.0.69"
log = "0.4.17"
smallvec = { version = "1.10", features = ["union", "const_generics"] }
symbol_table = "0.3.0"
rayon = "1.6.1"
