[package]
name = "slate-kernel-generic-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
slate-kernel-generic = { path = ".." }
anyhow = "1.0.81"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
syn = "2.0.58"
quote = "1.0.35"
proc-macro2 = "1.0.79"
