[package]
name = "slate-kernel-metalogic-mltt"
version = "0.1.0"
edition = "2021"

[dependencies]
slate-kernel-generic = { path = "../../generic" }
slate-kernel-metalogic = { path = ".." }
anyhow = "1.0.81"
env_logger = "0.11.3"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
mimalloc = { version = "0.1.39", default-features = false }
